--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -11,9 +11,9 @@
         color:white
     }
 </style>
-<body style="background-color:black">
+<body style="background-color:brown">
 
-    <nav class="navbar" style="background-color:#00a65a">
+    <nav class="navbar" style="background-color:black; font-weight:bold; font-size: 20px;">
         <a class="navbar-brand">My Book recommender</a>
         <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
